<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfdf2"
    tools:context=".MainActivity">

    <!-- app display logo -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="147dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageButton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <!-- top left - AM -->
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="188dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/day_time"
        android:scaleType="fitCenter"
        android:src="@drawable/am"
        app:layout_constraintEnd_toStartOf="@id/imageButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <!-- top right - PM -->
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="188dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/night_time"
        android:scaleType="fitCenter"
        android:src="@drawable/pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButton1"
        app:layout_constraintTop_toTopOf="@id/imageButton1" />

    <!-- plus sign -->
    <TextView
        android:id="@+id/plusSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_sign"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="#544D4D"
        app:layout_constraintTop_toBottomOf="@id/imageButton1"
        app:layout_constraintBottom_toTopOf="@id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- bottom left - summer -->
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="188dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/summer_time"
        android:scaleType="fitCenter"
        android:src="@drawable/summer"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintEnd_toStartOf="@id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton1"
        app:layout_constraintVertical_bias="0.0" />

    <!-- bottom right - winter -->
    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="188dp"
        android:layout_height="248dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/winter_time"
        android:scaleType="fitCenter"
        android:src="@drawable/winter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageButton3"
        app:layout_constraintTop_toTopOf="@id/imageButton3" />

    <!-- search perfume button -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="162dp"
        android:layout_height="60dp"
        android:backgroundTint="#545454"
        android:text="@string/search_perfume"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusSign"
        app:layout_constraintVertical_bias="0.54" />

    <!-- instruction/help button -->
    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:background="#545454"
        android:contentDescription="@string/desc_help_button"
        android:padding="4dp"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@android:drawable/ic_menu_info_details" />



</androidx.constraintlayout.widget.ConstraintLayout>